Added Delete Note functionality

--- a/front-end/src/style/style-dashboard.css
+++ b/front-end/src/style/style-dashboard.css
@@ -366,6 +366,7 @@ textarea {
   height: 150px;
   display: flex;
   flex-direction: column;
+  position: relative;
 
   border-bottom: 2px solid rgb(64, 64, 64);
   padding: 20px;
@@ -395,6 +396,24 @@ textarea {
 
   padding: 10px 0;
   box-sizing: border-box;
+}
+
+/* Note
+==================== */
+.NoteObjInfo {
+  display: flex;
+  position: absolute;
+  color: rgb(180, 180, 180);
+
+  right: 20px;
+  top: 20px;
+
+  padding: 5px;
+  box-sizing: border-box;
+}
+.NoteObjInfo .sidenav-icon:hover {
+  color: white;
+  cursor: default;
 }
 
 /* Note
