--- a/front-end/src/style/style-dashboard.css
+++ b/front-end/src/style/style-dashboard.css
@@ -361,7 +361,7 @@ textarea {
 
 /* NoteObj
 ==================== */
-.NoteObj {
+.NoteObj-container {
   width: 100%;
   height: 150px;
   display: flex;
@@ -374,8 +374,17 @@ textarea {
   justify-content: space-evenly;
   box-sizing: border-box;
 }
-.NoteObj:hover {
+.NoteObj-container:hover {
   background-color: rgb(64, 64, 64);
+}
+.NoteObj {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  justify-content: space-evenly;
+  box-sizing: border-box;
 }
 .NoteObj h2 {
   color: white;
