--- a/front-end/src/style/style-dashboard.css
+++ b/front-end/src/style/style-dashboard.css
@@ -435,7 +435,7 @@ textarea {
 
   background-color: rgb(51, 51, 51);
   box-sizing: border-box;
-  padding: 40px 40px 0px 40px;
+  padding: 20px;
 }
 .Note h2 {
   color: white;
@@ -447,6 +447,23 @@ textarea {
   background-color: rgba(0, 0, 0, 0.4);
   padding: 5px;
   margin: 10px 0 0 0;
+}
+
+/* Quill
+==================== */
+.noteEditorContainer {
+  grid-area: Note;
+  width: 100%;
+  height: 100%;
+
+  /* background-color: rgb(51, 51, 51); */
+  background-color: white;
+  padding: 20px;
+  box-sizing: border-box;
+}
+.quill {
+  height: 90%;
+  box-sizing: border-box;
 }
 
 
